autumn/tests/compile-fail/static_get_path_params.rs
use autumn_web::prelude::*;

#[static_get("/posts/{slug}")]
async fn show() -> &'static str {
    "post"
}

fn main() {}
